--- a/index.html
+++ b/index.html
@@ -1,34 +1,15 @@
-<!DOCTYPE html>
-<html lang="pt-br" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Aula Primeiro D</title>
-    <link rel="stylesheet" href="estilo.css">
-  </head>
-  <body>
-    <div class="menuPrincipal">
-       <nav>
-         <ul>
-           <li><a href="index.html">Home</a></li>
-           <li><a href="pagina01.html">Segundo Ano</a></li>
-           <li><a href="pagina02.html">Terceiro Ano</a></li>
-         </ul>
-       </nav>
-    </div>
-    <div class="conteudo">
-    <h1>Gastão Vidigal e o Novo Ensino Médio</h1>
-
-    <h2>Primeiro Ano</h2>
-
-    </div>
-    <div class="rodape">
-         Aluno: Fulano de Tal - Nr. Tal - Primeiro D
-    </div>
-
-    <div class="caixa1"></div>
-    <div class="caixa2"></div>
-    <div class="caixa3"></div>
-    <div class="caixa4"></div>
-    <div class="caixa5"></div>
-  </body>
-</html>
+  <!DOCTYPE html>
+  <html lang="pt-br" dir="ltr">
+    <head>
+      <meta charset="utf-8">
+      <title>Aula Primeiro D</title>
+      <link rel="stylesheet" href="estilo.css">
+    </head>
+    <body>
+      <h1>Aluna:Maria Vitória de Oliveira Campos</h1>
+      <h2>Turma: 1D - Número: 35</h2>
+      <div class="caixa1">
+      Conteúdo da caixa 1
+      </div>
+    </body>
+  </html>
