--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
       <h1>Aluna:Maria Vitória de Oliveira Campos</h1>
       <h2>Turma: 1D - Número: 35</h2>
       <div class="caixa1">
-      Conteúdo da caixa 1
+      Conteúdo da Caixa 1
+      </div>
+
+      <div class="caixa2">
+        Conteúdo da Caixa 2
       </div>
     </body>
   </html>
