--- a/index.html
+++ b/index.html
@@ -6,14 +6,27 @@
       <link rel="stylesheet" href="estilo.css">
     </head>
     <body>
-      <h1>Aluna:Maria Vitória de Oliveira Campos</h1>
-      <h2>Turma: 1D - Número: 35</h2>
+      <div>
+       <nav>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="pagina01.html">Pagina01</a></li>
+        <li><a href="pagina02.html">Pagina02</a></li>
+       </nav>
+      </div>
+
+      <h1>Maria Vitória de Oliveira Campos</h1>
+      <h2>Turma: 1D  - Número: 35</h2>
+
       <div class="caixa1">
-      Conteúdo da Caixa 1
+       Conteúdo da Caixa 1
       </div>
 
       <div class="caixa2">
-        Conteúdo da Caixa 2
+       Conteúdo da caixa 2
+      </div>
+
+      <div class="caixa3">
+       Conteúdo da caixa 3
       </div>
     </body>
   </html>
