--- a/index.html
+++ b/index.html
@@ -1,32 +1,36 @@
-  <!DOCTYPE html>
-  <html lang="pt-br" dir="ltr">
-    <head>
-      <meta charset="utf-8">
-      <title>Aula Primeiro D</title>
-      <link rel="stylesheet" href="estilo.css">
-    </head>
-    <body>
-      <div>
+<!DOCTYPE html>
+<html lang="pt-br" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Aula Primeiro D</title>
+    <link rel="stylesheet" href="estilo.css">
+  </head>
+  <body>
+    <div class="menuPrincipal">
        <nav>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="pagina01.html">Pagina01</a></li>
-        <li><a href="pagina02.html">Pagina02</a></li>
+         <ul>
+           <li><a href="index.html">Home</a></li>
+           <li><a href="pagina01.html">Página 01</a></li>
+           <li><a href="pagina02.html">Página 02</a></li>
+         </ul>
        </nav>
-      </div>
+    </div>
 
-      <h1>Maria Vitória de Oliveira Campos</h1>
-      <h2>Turma: 1D  - Número: 35</h2>
 
-      <div class="caixa1">
-       Conteúdo da Caixa 1
-      </div>
+    <h1>Maria Vitória de Oliveira Campos</h1>
+    <h2>Turma: 1D  - Número: 35</h2>
 
-      <div class="caixa2">
-       Conteúdo da caixa 2
-      </div>
+    <div class="caixa1">
+      Conteúdo da caixa 1
+    </div>
 
-      <div class="caixa3">
-       Conteúdo da caixa 3
-      </div>
-    </body>
-  </html>
+    <div class="caixa2">
+      Conteúdo da caixa 2
+    </div>
+
+    <div class="caixa3">
+      Conteúdo da caixa 3
+    </div>
+
+  </body>
+</html>
