--- a/pagina01.html
+++ b/pagina01.html
@@ -17,5 +17,10 @@
       </ul>
     </nav>
  </div>
+ 
+ <div class="caixaAviao">
+    <img id="aviao" src="aviao.png" alt="">
+  </div>
+   
 </body>
 </html>
