--- a/index.html
+++ b/index.html
@@ -10,27 +10,26 @@
        <nav>
          <ul>
            <li><a href="index.html">Home</a></li>
-           <li><a href="pagina01.html">Página 01</a></li>
-           <li><a href="pagina02.html">Página 02</a></li>
+           <li><a href="pagina01.html">Personagens</a></li>
+           <li><a href="pagina02.html">Gentre Grande2</a></li>
          </ul>
        </nav>
     </div>
+    <div class="conteudo">
+      <h1>Gente Grande</h1>
 
+      <h2>Filme</h2>
 
-    <h1>Maria Vitória de Oliveira Campos</h1>
-    <h2>Turma: 1D  - Número: 35</h2>
-
-    <div class="caixa1">
-      Conteúdo da caixa 1
     </div>
-
-    <div class="caixa2">
-      Conteúdo da caixa 2
+    <div class="rodape">
+      Aluno: Maria Vitória de Oliveira Campos - N°: 22 - 1 ANO D
     </div>
+ 
 
-    <div class="caixa3">
-      Conteúdo da caixa 3
-    </div>
-
+    <div class="caixa1"></div>
+    <div class="caixa2"></div>
+    <div class="caixa3"></div>
+    <div class="caixa4"></div>
+    <div class="caixa5"></div>
   </body>
 </html>
