--- a/index.html
+++ b/index.html
@@ -12,24 +12,38 @@
            <li><a href="index.html">Home</a></li>
            <li><a href="pagina01.html">Personagens</a></li>
            <li><a href="pagina02.html">Gentre Grande2</a></li>
+           <li><a href="pagina03.html">Gente Grande3</a></li>
          </ul>
        </nav>
     </div>
     <div class="conteudo">
-      <h1>Gente Grande</h1>
-
-      <h2>Filme</h2>
-
+      <h1>Gente Grande - Filme</h1>
+  <p>
+    Gente Grande (2010) é um dos diversos destaques da carreira de Adam Sandler. O ator e comediante norte-americano escreveu, produziu e estrelou a comédia sobre um grupo de amigos de infância que se encontram décadas depois e aproveitam o feriado de 4 de julho juntos.
+  </p>
+  <ol>
+    <li>
+      Uma década após o lançamento de Gente Grande, o longa-metragem continua popular e está disponível em plataformas de streaming como Globoplay e Netflix.
+    </li>
+    <li>
+      Pensando nisso, separamos uma lista de curiosidades sobre o filme. Confira:
+    </li>
+    <li>
+      Gente Grande: Preconceito nos bastidores.
+    </li>
+    <li>
+      Gente Grande: A Gravidez de Maya Rudolph.
+    </li>
+    <li>
+      Gente Grande: Uma Maserati de presente.
+    </li>
+  </ol>
     </div>
     <div class="rodape">
-      Aluno: Maria Vitória de Oliveira Campos - N°: 22 - 1 ANO D
+      <div id="copy">
+        &copy;Maria Vitória de Oliveira Campos - N°:22 - 1 ANO D
+      </div>
     </div>
- 
-
-    <div class="caixa1"></div>
-    <div class="caixa2"></div>
-    <div class="caixa3"></div>
-    <div class="caixa4"></div>
-    <div class="caixa5"></div>
+     
   </body>
 </html>
