--- a/pagina01.html
+++ b/pagina01.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Aula Primeiro D</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
@@ -12,8 +12,9 @@
     <nav>
       <ul>
         <li><a href="index.html"> Home </a></li>
-        <li><a href="pagina01.html"> Página 01 </a></li>
-        <li><a href="pagina02.html"> Página 02 </a></li>
+        <li><a href="pagina01.html"> Personagens </a></li>
+        <li><a href="pagina02.html"> Gente Grande2 </a></li>
+        <li><a href="pagina03.html"> Gente Grande3 </a></li>
       </ul>
     </nav>
  </div>
@@ -21,6 +22,42 @@
  <div class="caixaAviao">
     <img id="aviao" src="aviao.png" alt="">
   </div>
+
+  <div class="conteudo">
+    <h1>Personagens</h1>
+    <p>Personagens de Gente Grande:</p>
+        <p><b>&nbsp;&nbsp;●Lenny Feder;</b></p>
+        <p><b>&nbsp;&nbsp;●Eric Lamonsoff;</b></p>
+        <p><b>&nbsp;&nbsp;●Kurt McKenzie;</b></p>
+        <p><b>&nbsp;&nbsp;●Rob Hilliard;</b></p>
+        <p><b>&nbsp;&nbsp;●Marcus Higgins;</b></p>
+        <p><b>&nbsp;&nbsp;●Sally Lamonsoff;</b></p>
+        <p><b>&nbsp;&nbsp;●Wiley;</b></p>
+        <p><b>&nbsp;&nbsp;●Roxanne Chase-Feder;</b></p>
+        <p><b>&nbsp;&nbsp;●Rita;</b></p>
+        <p><b>&nbsp;&nbsp;●Deanne McKenzie;</b></p>
+        <p><b>&nbsp;&nbsp;●Gloria;</b></p>
+        <p><b>&nbsp;&nbsp;●Mama Ronzoni;</b></p>
+        <p><b>&nbsp;&nbsp;●Bobby Buzzer Ferdinando;</b></p>
+        <p><b>&nbsp;&nbsp;●Dickie Bailey;</b></p>
+        <p><b>&nbsp;&nbsp;●Malcolm;</b></p>
+        <p><b>&nbsp;&nbsp;●Jasmine Hilliard;</b></p>
+        <p><b>&nbsp;&nbsp;●Water Park Stud;</b></p>
+        <p><b>&nbsp;&nbsp;●Robideaux;</b></p>
+        <p><b>&nbsp;&nbsp;●Amber Hilliard;</b></p>
+        <p><b>&nbsp;&nbsp;●Greg Feder;</b></p>
+        <p><b>&nbsp;&nbsp;●Keithie Feder;</b></p>
+        <p><b>&nbsp;&nbsp;●Becky Feder;</b></p>
+        <p><b>&nbsp;&nbsp;●Donna Lamonsoff;</b></p>
+        <p><b>&nbsp;&nbsp;●Mulher de Tardio;</b></p>
+        <p><b>&nbsp;&nbsp;●Tardio;</b></p>
+        <p><b>&nbsp;&nbsp;●Muzby;</b></p>
+        <p><b>&nbsp;&nbsp;●Bridget Hilliard;</b></p>
+        <p><b>&nbsp;&nbsp;●Charlotte McKenzie;</b></p>
+        <p><b>&nbsp;&nbsp;●Pai de Higgins;</b></p>
+        <p><b>&nbsp;&nbsp;●Sra. Bailey;</b></p>
+        <p><b>&nbsp;&nbsp;●Pastor;</b></p>
+    </div>
    
 </body>
 </html>
