--- a/index.html
+++ b/index.html
@@ -5,42 +5,50 @@
     <title>Aula Primeiro D</title>
     <link rel="stylesheet" href="estilo.css">
   </head>
+
+
   <body>
+    <div class="logoGenteGrande">
+      <img height="100px" width="120px" src="gentegrande.jpg" alt="">
+    </div>
     <div class="menuPrincipal">
        <nav>
          <ul>
            <li><a href="index.html">Home</a></li>
            <li><a href="pagina01.html">Personagens</a></li>
            <li><a href="pagina02.html">Gentre Grande2</a></li>
-           <li><a href="pagina03.html">Gente Grande3</a></li>
          </ul>
        </nav>
     </div>
+
     <div class="conteudo">
       <h1>Gente Grande - Filme</h1>
-  <p>
-    Gente Grande (2010) é um dos diversos destaques da carreira de Adam Sandler. O ator e comediante norte-americano escreveu, produziu e estrelou a comédia sobre um grupo de amigos de infância que se encontram décadas depois e aproveitam o feriado de 4 de julho juntos.
-  </p>
-  <ol>
-    <li>
-      Uma década após o lançamento de Gente Grande, o longa-metragem continua popular e está disponível em plataformas de streaming como Globoplay e Netflix.
-    </li>
-    <li>
-      Pensando nisso, separamos uma lista de curiosidades sobre o filme. Confira:
-    </li>
-    <li>
-      Gente Grande: Preconceito nos bastidores.
-    </li>
-    <li>
-      Gente Grande: A Gravidez de Maya Rudolph.
-    </li>
-    <li>
-      Gente Grande: Uma Maserati de presente.
-    </li>
-  </ol>
-    </div>
-    <div class="rodape">
-      <div id="copy">
+      <p>
+        Gente Grande (2010) é um dos diversos destaques da carreira de Adam Sandler. O ator e comediante norte-americano escreveu, produziu e estrelou a comédia sobre um grupo de amigos de infância que se encontram décadas depois e aproveitam o feriado de 4 de julho juntos.
+      </p>
+      <p>
+        Uma década após o lançamento de Gente Grande, o longa-metragem continua popular e está disponível em plataformas de streaming como Globoplay e Netflix.
+      </p>
+      <p>Conheça um pouco sobre o Filme:</p>
+      <div class="video">
+        <iframe width="560" height="315" src="https://youtu.be/HKVve_VSz58" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+      <h2>Curiosidades:</h2>
+
+      <p>
+        Pensando nisso, separamos uma lista de curiosidades sobre o filme. Confira:
+      </p>
+      <p>
+        1. Gente Grande: Preconceito nos bastidores.
+      </p>
+      <p>
+        2. Gente Grande: A Gravidez de Maya Rudolph.
+      </p>
+      <p>
+        3. Gente Grande: Uma Maserati de presente.
+      </p>
+    <div class="capaRodape">
+      <div id="rodape">
         &copy;Maria Vitória de Oliveira Campos - N°:22 - 1 ANO D
       </div>
     </div>
