--- a/pagina01.html
+++ b/pagina01.html
@@ -8,56 +8,25 @@
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
+  <div class="logoGenteGrande">
+    <img height="100px" width="120px" src="gentegrande.jpg" alt="">
+  </div>
   <div class="menuPrincipal">
     <nav>
       <ul>
-        <li><a href="index.html"> Home </a></li>
-        <li><a href="pagina01.html"> Personagens </a></li>
-        <li><a href="pagina02.html"> Gente Grande2 </a></li>
-        <li><a href="pagina03.html"> Gente Grande3 </a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="pagina01.html">Personagens</a></li>
+        <li><a href="pagina02.html">Gente Grande2</a></li>
       </ul>
     </nav>
  </div>
- 
- <div class="caixaAviao">
-    <img id="aviao" src="aviao.png" alt="">
-  </div>
-
+<div class="conteudoAnual">
   <div class="conteudo">
-    <h1>Personagens</h1>
-    <p>Personagens de Gente Grande:</p>
-        <p><b>&nbsp;&nbsp;●Lenny Feder;</b></p>
-        <p><b>&nbsp;&nbsp;●Eric Lamonsoff;</b></p>
-        <p><b>&nbsp;&nbsp;●Kurt McKenzie;</b></p>
-        <p><b>&nbsp;&nbsp;●Rob Hilliard;</b></p>
-        <p><b>&nbsp;&nbsp;●Marcus Higgins;</b></p>
-        <p><b>&nbsp;&nbsp;●Sally Lamonsoff;</b></p>
-        <p><b>&nbsp;&nbsp;●Wiley;</b></p>
-        <p><b>&nbsp;&nbsp;●Roxanne Chase-Feder;</b></p>
-        <p><b>&nbsp;&nbsp;●Rita;</b></p>
-        <p><b>&nbsp;&nbsp;●Deanne McKenzie;</b></p>
-        <p><b>&nbsp;&nbsp;●Gloria;</b></p>
-        <p><b>&nbsp;&nbsp;●Mama Ronzoni;</b></p>
-        <p><b>&nbsp;&nbsp;●Bobby Buzzer Ferdinando;</b></p>
-        <p><b>&nbsp;&nbsp;●Dickie Bailey;</b></p>
-        <p><b>&nbsp;&nbsp;●Malcolm;</b></p>
-        <p><b>&nbsp;&nbsp;●Jasmine Hilliard;</b></p>
-        <p><b>&nbsp;&nbsp;●Water Park Stud;</b></p>
-        <p><b>&nbsp;&nbsp;●Robideaux;</b></p>
-        <p><b>&nbsp;&nbsp;●Amber Hilliard;</b></p>
-        <p><b>&nbsp;&nbsp;●Greg Feder;</b></p>
-        <p><b>&nbsp;&nbsp;●Keithie Feder;</b></p>
-        <p><b>&nbsp;&nbsp;●Becky Feder;</b></p>
-        <p><b>&nbsp;&nbsp;●Donna Lamonsoff;</b></p>
-        <p><b>&nbsp;&nbsp;●Mulher de Tardio;</b></p>
-        <p><b>&nbsp;&nbsp;●Tardio;</b></p>
-        <p><b>&nbsp;&nbsp;●Muzby;</b></p>
-        <p><b>&nbsp;&nbsp;●Bridget Hilliard;</b></p>
-        <p><b>&nbsp;&nbsp;●Charlotte McKenzie;</b></p>
-        <p><b>&nbsp;&nbsp;●Pai de Higgins;</b></p>
-        <p><b>&nbsp;&nbsp;●Sra. Bailey;</b></p>
-        <p><b>&nbsp;&nbsp;●Pastor;</b></p>
+    <h1>Os Personagens</h1>
+    <div class="formacao">
+      <img src="Personagem.jpg" alt="">
     </div>
-   
+  </div>
+</div>
 </body>
 </html>
