--- a/pagina02.html
+++ b/pagina02.html
@@ -1,26 +1,36 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aula Primeiro D</title>
+    <title></title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
+  <div class="logoGenteGrande">
+    <img height="100" width="120" src="gentegrande.jpg" alt="">
+  </div>
   <div class="menuPrincipal">
     <nav>
       <ul>
-        <li><a href="index.html"> Home </a></li>
-        <li><a href="pagina01.html"> Personagens </a></li>
-        <li><a href="pagina02.html"> Gente Grande2 </a></li>
-        <li><a href="pagina03.html"> Gente Grande3 </a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="pagina01.html">Personagens</a></li>
+        <li><a href="pagina02.html">Gente Grande2</a></li>
       </ul>
     </nav>
  </div>
- </div>
- <div class="conteudo">
-  <h1>Gente Grande 2</h1>
- </div>
+</div>
+<div class="conteudoAnual">
+
+  <div class="conteudo">
+    <h1>Gente Grande 2</h1>
+    <div class="formacao">
+      <img src="genteGrande2.jpg" alt="">
+    </div>
+  </div>
+</div>
+</div>
+
 </body>
 </html>
